update config template

--- a/standalone/config_template.yaml
+++ b/standalone/config_template.yaml
@@ -2,6 +2,12 @@ exchange_setting:
   api_key: 
   api_secret: 
   exchange: binance
+  subaccount: ''
+keywords:
+  long:
+  - buy
+  - long
+  short: []
 log_setting:
   bot_log_path: rose_bot_log.csv
   log_path: log.txt
@@ -16,6 +22,10 @@ order_setting:
   take_profit: '0.0'
   target: FUTURE
   test_only: true
+  no_duplicate: true
+other_setting:
+  maximum_latency: '10'
+  pro: false
 path: 
 telegram_setting:
   notify_channel: Bot Notify
