--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -18,8 +18,6 @@ doc:
 	python -m pydoc -b
 
 
-compile-all: compile compile-win compile-linux
-
 compile:
 	pyinstaller --noconsole -F src/gui.py
 
@@ -29,9 +27,7 @@ compile-win:
 	cp -r src build-win
 	cp requirements.txt build-win/src
 	cp setup.py build-win/src
-	docker run -v "$(shell pwd)/build-win/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-windows "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
-	# matplotlib msvc-runtime easyocr numpy pillow
-	# telethon pyyaml pysimplegui pandas
+	docker run -v "$(shell pwd)/build-win/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-windows "python -m pip install --upgrade pip && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
 
 compile-linux:
 	# this is for compile linux elf on mac
@@ -40,7 +36,7 @@ compile-linux:
 	cp -r src build-linux
 	cp requirements.txt build-linux/src
 	cp setup.py build-linux/src
-	docker run -v "$(shell pwd)/build-linux/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-linux "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
+	docker run -v "$(shell pwd)/build-linux/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-linux "python -m pip install --upgrade pip && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
 
 
 ###########################
