--- a/standalone/requirements.txt
+++ b/standalone/requirements.txt
@@ -1,12 +1,6 @@
 telethon
+python-binance==1.0.14
 pyyaml
 pysimplegui
 pandas
 pyinstaller
-
-#matplotlib
-#msvc-runtime
-#easyocr
-#numpy
-#pillow
-#python-binance==1.0.14
