add daily scalp

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -21,7 +21,7 @@ doc:
 compile-all: compile compile-win compile-linux
 
 compile:
-	pyinstaller --noconsole -F src/gui.py
+	pyinstaller --noconsole -D src/gui.py
 
 compile-win:
 	# this is for compile windows exe on mac
@@ -29,7 +29,7 @@ compile-win:
 	cp -r src build-win
 	cp requirements.txt build-win/src
 	cp setup.py build-win/src
-	docker run -v "$(shell pwd)/build-win/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-windows "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
+	docker run -v "$(shell pwd)/build-win/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-windows "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -D gui.py"
 	# matplotlib msvc-runtime easyocr numpy pillow
 	# telethon pyyaml pysimplegui pandas
 
@@ -40,7 +40,7 @@ compile-linux:
 	cp -r src build-linux
 	cp requirements.txt build-linux/src
 	cp setup.py build-linux/src
-	docker run -v "$(shell pwd)/build-linux/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-linux "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -F gui.py"
+	docker run -v "$(shell pwd)/build-linux/src:/src/" -v "$(shell pwd)/setup.py:/setup.py" cdrx/pyinstaller-linux "python -m pip install --upgrade pip setuptools && python -m pip install ccxt && export PYTHONPATH=/ && pyinstaller -D gui.py"
 
 
 ###########################
